--- a/Client/src/CSS/Header.css
+++ b/Client/src/CSS/Header.css
@@ -3,7 +3,7 @@
 /* Reset default margin and padding */
 .header_wrapper {
     margin: 0;
-    padding: 0;
+    padding: 30px;
     box-sizing: border-box;
 }
 
